--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "caouecs/laravel-lang": "^3.0",
         "fideloper/proxy": "^4.0",
         "gregwar/captcha": "^1.1",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
