--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,14 @@
         "php": "^7.1.3",
         "caouecs/laravel-lang": "^3.0",
         "fideloper/proxy": "^4.0",
+        "flc/dysms": "^1.0",
         "gregwar/captcha": "^1.1",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
+        "swiftmailer/swiftmailer": "^6.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
